Ensure error dialog is on top z-index

--- a/src/app/error-dialog/error-modal-dialog/error-modal-dialog.component.scss
+++ b/src/app/error-dialog/error-modal-dialog/error-modal-dialog.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-
+  z-index: 10000;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -18,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index: 10000;
 }
 
 .closed {
